# scaffold-arena

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  RELEASE_PLAN.md  SECURITY.md  SUPPORT.md  docker-compose.yml  railway.toml
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/audit/: __init__.py  trace_audit.py
backend/autopsy/: analyzer.py
backend/config/: models.py  settings.py
backend/core/: auth.py  budget.py  events.py  logging_setup.py  provider.py  registry.py  run_engine.py  stats.py  storage.py
backend/evaluation/: deterministic.py  harness.py  llm_judge.py
backend/report/: markdown.py  pdf.py
backend/scaffolds/: bare.py  base.py  memory_critique.py  plan_execute_verify.py  tool_error_recovery.py
backend/tasks/: base.py  custom.py  extraction.py  research_synthesis.py  risk_analysis.py
backend/tests/: test_deterministic_metrics.py  test_evaluation_tasks.py  test_json_extract.py  test_llm_judge.py  test_logging_setup.py  test_models_events.py  test_phase1_fixes.py  test_phase2_run_engine.py  test_phase2_security.py  test_provider_retries.py  test_stats_api.py  test_storage_api.py  test_trace_audit.py  test_world_class_endpoints.py
backend/tests/fixtures/trace_audit/: sample_runs.json
backend/utils/: json_extract.py  text.py
docs/: README.md  api-reference.md  architecture.md  evaluation.md  faq.md  getting-started.md  onboarding-role-mapping-spec.md  onboarding.md  (+3 more)
(+224 files in other folders)
