[project]
name = "scaffold-arena-backend"
version = "0.1.0"
description = "Scaffold Arena - Scaffold Engineering Workbench backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sse-starlette>=2.2.0",
    "anthropic>=0.43.0",
    "jsonschema>=4.23.0",
    "rapidfuzz>=3.11.0",
    "orjson>=3.10.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]
pdf = [
    "reportlab>=4.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
